[package]
name = "gitlab-push-and-mr"
version = "1.3.1"
authors = ["Mario Zupan <mario@zupzup.org>", "René Ribaud <rene.ribaud@cgi.com>"]
edition = "2018"

[dependencies]
hyper = "0.13.1"
hyper-tls = "0.4.0"
tokio = "0.2.6"
futures = "0.3.1"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.44"
bytes = "0.5.3"
toml = "0.5.5"
git2 = "0.11.0"
clap = "2.33.0"
