[package]
name = "gitlab-push-and-mr"
version = "1.4.0"
authors = ["Mario Zupan <mario@zupzup.org>", "René Ribaud <rene.ribaud@cgi.com>"]
edition = "2018"

[dependencies]
hyper = { version = "0.14.18", features = ["full"] }
hyper-tls = "0.5.0"
tokio = { version = "1.18.2", features = ["full"] }
futures = "0.3.16"
serde = {version = "1.0.127", features = ["derive"]}
serde_json = "1.0.81"
bytes = "1.0.1"
toml = "0.5.9"
git2 = "0.14.1"
clap = {version = "3.1.18", features = ["cargo"]}
