[package]
name = "gitlab-push-and-mr"
version = "1.4.0"
authors = ["Mario Zupan <mario@zupzup.org>", "René Ribaud <rene.ribaud@cgi.com>"]
edition = "2018"

[dependencies]
hyper = { version = "0.14.24", features = ["full"] }
hyper-tls = "0.5.0"
tokio = { version = "1.9.0", features = ["full"] }
futures = "0.3.16"
serde = {version = "1.0.127", features = ["derive"]}
serde_json = "1.0.66"
bytes = "1.0.1"
toml = "0.5.8"
git2 = "0.14.1"
clap = {version = "3.1.8", features = ["cargo"]}
